--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"build": "next build",
+		"build": "next build && next export",
 		"start": "next start",
 		"lint": "next lint",
-		"deploy": "gh-pages -d out"
+		"predeploy": "npm run build",
+		"deploy": "echo 'Nothing to deploy — push to main'"
 	},
 	"dependencies": {
 		"framer-motion": "^12.0.6",
